--- a/v1/css/style3.css
+++ b/v1/css/style3.css
@@ -459,7 +459,7 @@ h1, h2, h3, h4, h5, h6 {
   bottom: 0;
   margin-top: -150px;
   z-index: 10;
-  padding-bottom: 7em;
+  /* padding-bottom: 7em; */
 }
 @media screen and (max-width: 768px) {
   #fh5co-intro {
@@ -611,7 +611,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #fh5co-services, #fh5co-testimonials, #fh5co-counters, #fh5co-work, #fh5co-contact, #fh5co-about {
-  padding: 4em 0;
+  padding: 2em 0;
 }
 @media screen and (max-width: 768px) {
   #fh5co-services, #fh5co-testimonials, #fh5co-counters, #fh5co-work, #fh5co-contact, #fh5co-about {
@@ -1406,6 +1406,10 @@ h1, h2, h3, h4, h5, h6 {
   animation-duration: .3s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
+}
+
+.client-logo{
+  margin:auto;
 }
 
 /*# sourceMappingURL=style3.css.map */
